@@ -560,7 +560,12 @@ class CvVictoryScreen:
 			screen.setTableText(szTable, 0, iRow, sString, "", WidgetTypes.WIDGET_GENERAL, -1, -1, CvUtil.FONT_LEFT_JUSTIFY)
 
 			# BUG Poll statistical error
-			sString = localText.getText("TXT_KEY_BUG_VICTORY_BUG_POLL_ERROR", (self.formatPercent(3.5 + gc.getASyncRand().get(10, "") / 10.0), ))
+			if gc.getGame().isGameMultiPlayer():
+				iRandError = 4.0
+			else:
+				iRandError = 3.5 + gc.getGame().getSorenRandNum(10, "Election Results Statistical Error") / 10.0
+
+			sString = localText.getText("TXT_KEY_BUG_VICTORY_BUG_POLL_ERROR", (self.formatPercent(iRandError), ))
 			iRow = screen.appendTableRow(szTable)
 			screen.setTableText(szTable, 0, iRow, sString, "", WidgetTypes.WIDGET_GENERAL, -1, -1, CvUtil.FONT_LEFT_JUSTIFY)
 
